fix issue with no margins on phone input (https://github.com/woocommerce/woocommerce-blocks/pull/2989)
* fix issue with overlapping margins

* move styles out of select

* remove extra spacing

* remove extra spacing from cart

* move styles to state input and remove extra position.

--- a/plugins/woocommerce-blocks/assets/js/base/components/cart-checkout/shipping-calculator/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/cart-checkout/shipping-calculator/style.scss
@@ -4,6 +4,7 @@
 
 .wc-block-components-shipping-calculator-address__button {
 	width: 100%;
+	margin-top: em($gap-large);
 }
 
 .wc-block-components-shipping-calculator {
